--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	
 	<artifactId>jinah-entity</artifactId>
-	<version>1.1.0_2</version>
+	<version>1.2.0_rc1</version>
 	<name>JINAH Entity lib</name>
 
     <url>http://www.obadaro.com/jinah/jinah-entity</url>
